@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-07-04T01:25:01Z",
-  "count_outdated" : 1870,
-  "uniques_outdated" : 1109,
-  "count" : 1885,
-  "uniques" : 1124,
+  "timestamp" : "2025-07-05T01:22:18Z",
+  "count_outdated" : 1871,
+  "uniques_outdated" : 1110,
+  "count" : 1887,
+  "uniques" : 1126,
   "clones" : [
-    {
-      "timestamp": "2025-06-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-06-22T00:00:00Z",
       "count": 1,
@@ -103,6 +94,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-07-04T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
