@@ -1,12 +1,7 @@
 {
-  "count": 15,
-  "uniques": 9,
+  "count": 16,
+  "uniques": 10,
   "clones": [
-    {
-      "timestamp": "2025-06-21T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-06-22T00:00:00Z",
       "count": 1,
@@ -56,6 +51,11 @@
       "timestamp": "2025-07-03T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2025-07-04T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
