@@ -1,3 +1,12 @@
+2025-07-05T01:22:18Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16083131530 # 695
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-05
+* notice: last 14d: unq all: 10 16
+* notice: prev accum: outdated-unq outdated-all / unq all: 1109 1870 / 1124 1885
+* notice: next accum: outdated-unq outdated-all / unq all: 1110 1871 / 1126 1887
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [2025-06-21] / [2025-07-04]
+
 2025-07-04T01:25:01Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16063782159 # 694
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-04
